--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -1,8 +1,9 @@
 {
   "jsst.title": "Jack's Server Side Tweaks",
+  "jsst.common.change": "Change",
+  "jsst.common.confirm": "Confirm",
   "jsst.beaconpowers.beacon_level": "Beacon Level: %d/%d",
   "jsst.beaconpowers.beacon_requirement_primary": "Requires a beacon level of at least 1",
   "jsst.beaconpowers.beacon_requirement_secondary": "Requires a beacon level of at least %d",
-  "jsst.beaconpowers.beacon_payment": "Place payment item to the right",
-  "jsst.beaconpowers.beacon_confirm": "Confirm"
+  "jsst.beaconpowers.beacon_payment": "Place payment item to the right"
 }
