[change] formatting pass

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -5,13 +5,17 @@
   "jsst.common.clear": "Clear",
   "jsst.common.searchFilter": "Current Search Filter: \"%s\"",
   "jsst.common.invalid": "Invalid",
+  "jsst.common.save": "Save",
 
-  "jsst.beaconpowers.beacon_level_active": "Beacon Level %d (active)",
-  "jsst.beaconpowers.beacon_level_inactive": "Beacon Level %d (inactive)",
-  "jsst.beaconpowers.beacon_requirement": "Requires a beacon level of at least %d",
-  "jsst.beaconpowers.beacon_payment": "Place payment item to the right",
+  "jsst.beaconPowers.beaconLevelActive": "Beacon Level %d (active)",
+  "jsst.beaconPowers.beaconLevelInactive": "Beacon Level %d (inactive)",
+  "jsst.beaconPowers.beaconRequirement": "Requires a beacon level of at least %d",
+  "jsst.beaconPowers.error.beaconPayment": "Place payment item to the left",
+  "jsst.beaconPowers.error.noChanges": "No changes have been made",
+  "jsst.beaconPowers.error.needsPrimary": "Select a primary power",
 
   "jsst.itemEditor.selectBaseItem": "Select a base item",
+  "jsst.itemEditor.title": "Item Editor",
 
   "jsst.command.config.open_wiki": "Click to open the wiki page for this option",
   "jsst.command.config.check": "%s: %s",
@@ -24,5 +28,5 @@
   "jsst.command.config.list.added": "%s: Added %s",
   "jsst.command.config.list.removed": "%s: Removed %s",
 
-  "jsst.command.config.power_list_header": "Level %d"
+  "jsst.command.config.powerListHeader": "Level %d"
 }
