[feat] simple gradients

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -52,6 +52,19 @@
   "jsst.itemEditor.colour.chatFormatting": "Chat Formatting",
   "jsst.itemEditor.colour.dyes": "Dyes",
   "jsst.itemEditor.colour.extra": "Extra",
+  "jsst.itemEditor.colour.gradients": "Gradients",
+  "jsst.itemEditor.colour.gradient.rainbow": "Rainbow",
+  "jsst.itemEditor.colour.gradient.vaporwave": "Vaporwave",
+  "jsst.itemEditor.colour.gradient.solar": "Solar",
+  "jsst.itemEditor.colour.gradient.gay": "Gay",
+  "jsst.itemEditor.colour.gradient.lesbian": "Lesbian",
+  "jsst.itemEditor.colour.gradient.bisexual": "Bisexual",
+  "jsst.itemEditor.colour.gradient.pansexual": "Pansexual",
+  "jsst.itemEditor.colour.gradient.intersex": "Intersex",
+  "jsst.itemEditor.colour.gradient.nonbinary": "Non-Binary",
+  "jsst.itemEditor.colour.gradient.transgender": "Transgender",
+  "jsst.itemEditor.colour.gradient.asexual": "Asexual",
+  "jsst.itemEditor.colour.gradient.aromantic": "Aromantic",
 
   "jsst.command.config.open_wiki": "Click to open the wiki page for this option",
   "jsst.command.config.check": "%s: %s",
