--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -24,7 +24,7 @@
 
   "jsst.itemEditor.menus.resLocHint": "Must be of the form %s",
 
-  "jsst.itemEditor.style": "Select Text Style",
+  "jsst.itemEditor.style.title": "Select Text Style",
   "jsst.itemEditor.style.bold": "Bold",
   "jsst.itemEditor.style.italic": "Italic",
   "jsst.itemEditor.style.underscore": "Underscore",
@@ -36,16 +36,11 @@
   "jsst.itemEditor.style.removeColour": "Remove Colour",
   "jsst.itemEditor.style.removeStyle": "Remove Style",
 
-  "jsst.itemEditor.simpleName": "Name Editor (Simple)",
-  "jsst.itemEditor.simpleName.changeText": "Change Text",
-  "jsst.itemEditor.simpleName.changeStyle": "Change Style",
-
-  "jsst.itemEditor.durability": "Durability Editor",
-
-  "jsst.itemEditor.colour.custom": "Custom Colour",
-  "jsst.itemEditor.colour.custom.hint": "Valid formats are:",
-
+  "jsst.itemEditor.colour.title": "Select Colour",
   "jsst.itemEditor.colour.page": "Colour Page",
+  "jsst.itemEditor.colour.chatFormatting": "Chat Formatting",
+  "jsst.itemEditor.colour.dyes": "Dyes",
+  "jsst.itemEditor.colour.extra": "Extra",
   "jsst.itemEditor.colour.common": "Common",
   "jsst.itemEditor.colour.uncommon": "Uncommon",
   "jsst.itemEditor.colour.rare": "Rare",
@@ -55,22 +50,31 @@
   "jsst.itemEditor.colour.negativeTooltips": "Negative Tooltips",
   "jsst.itemEditor.colour.potionAppliedTooltips": "Potion 'When Applied' Tooltips",
   "jsst.itemEditor.colour.weaponStats": "Weapon Stats Tooltips",
-  "jsst.itemEditor.colour.chatFormatting": "Chat Formatting",
-  "jsst.itemEditor.colour.dyes": "Dyes",
-  "jsst.itemEditor.colour.extra": "Extra",
-  "jsst.itemEditor.colour.gradients": "Gradients",
-  "jsst.itemEditor.colour.gradient.rainbow": "Rainbow",
-  "jsst.itemEditor.colour.gradient.vaporwave": "Vaporwave",
-  "jsst.itemEditor.colour.gradient.solar": "Solar",
-  "jsst.itemEditor.colour.gradient.gay": "Gay",
-  "jsst.itemEditor.colour.gradient.lesbian": "Lesbian",
-  "jsst.itemEditor.colour.gradient.bisexual": "Bisexual",
-  "jsst.itemEditor.colour.gradient.pansexual": "Pansexual",
-  "jsst.itemEditor.colour.gradient.intersex": "Intersex",
-  "jsst.itemEditor.colour.gradient.nonbinary": "Non-Binary",
-  "jsst.itemEditor.colour.gradient.transgender": "Transgender",
-  "jsst.itemEditor.colour.gradient.asexual": "Asexual",
-  "jsst.itemEditor.colour.gradient.aromantic": "Aromantic",
+  "jsst.itemEditor.colour.custom": "Custom Colour",
+  "jsst.itemEditor.colour.custom.hint": "Valid formats are:",
+
+  "jsst.itemEditor.gradient.page": "Gradients",
+  "jsst.itemEditor.gradient.rainbow": "Rainbow",
+  "jsst.itemEditor.gradient.vaporwave": "Vaporwave",
+  "jsst.itemEditor.gradient.solar": "Solar",
+  "jsst.itemEditor.gradient.far": "Far",
+  "jsst.itemEditor.gradient.gay": "Gay",
+  "jsst.itemEditor.gradient.lesbian": "Lesbian",
+  "jsst.itemEditor.gradient.bisexual": "Bisexual",
+  "jsst.itemEditor.gradient.pansexual": "Pansexual",
+  "jsst.itemEditor.gradient.intersex": "Intersex",
+  "jsst.itemEditor.gradient.nonbinary": "Non-Binary",
+  "jsst.itemEditor.gradient.transgender": "Transgender",
+  "jsst.itemEditor.gradient.asexual": "Asexual",
+  "jsst.itemEditor.gradient.aromantic": "Aromantic",
+  "jsst.itemEditor.gradient.custom": "Custom Gradient",
+  "jsst.itemEditor.gradient.custom.swap": "Swap Colours",
+
+  "jsst.itemEditor.simpleName": "Name Editor (Simple)",
+  "jsst.itemEditor.simpleName.changeText": "Change Text",
+  "jsst.itemEditor.simpleName.changeStyle": "Change Style",
+
+  "jsst.itemEditor.durability": "Durability Editor",
 
   "jsst.command.config.open_wiki": "Click to open the wiki page for this option",
   "jsst.command.config.check": "%s: %s",
