--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -86,9 +86,9 @@
 
   "jsst.itemEditor.durability": "Durability Editor",
 
-  "jsst.itemEditor.stackNBTPrinter": "Stack NBT Printer",
-  "jsst.itemEditor.stackNBTPrinter.hint": "Useful for label maps",
-  "jsst.itemEditor.stackNBTPrinter.copyInstruction": "Click to copy the label for this stack. Include quotes!",
+  "jsst.itemEditor.labelMapNBTPrinter": "Stack NBT Printer",
+  "jsst.itemEditor.labelMapNBTPrinter.hint": "Used for label map data files",
+  "jsst.itemEditor.labelMapNBTPrinter.copyInstruction": "Click to copy the label for this stack. Include quotes!",
 
   "jsst.command.config.open_wiki": "Click to open the wiki page for this option",
   "jsst.command.config.check": "%s: %s",
