[feat] potion editor

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -56,6 +56,7 @@
   "jsst.itemEditor.colour.potionAppliedTooltips": "Potion 'When Applied' Tooltips",
   "jsst.itemEditor.colour.weaponStats": "Weapon Stats Tooltips",
   "jsst.itemEditor.colour.custom": "Custom Colour",
+  "jsst.itemEditor.colour.custom.remove": "Remove Custom Colour",
   "jsst.itemEditor.colour.custom.hint": "Valid formats are:",
 
   "jsst.itemEditor.gradient.page": "Gradients",
@@ -87,6 +88,13 @@
   "jsst.itemEditor.name": "Name Editor",
 
   "jsst.itemEditor.durability": "Durability Editor",
+
+  "jsst.itemEditor.potionEditor": "Potion Editor",
+  "jsst.itemEditor.potionEditor.setPotion": "Set Potion",
+  "jsst.itemEditor.potionEditor.setEffect": "Set Effect",
+  "jsst.itemEditor.potionEditor.setAmplifier": "Set Amplifier",
+  "jsst.itemEditor.potionEditor.setDuration": "Set Duration",
+  "jsst.itemEditor.potionEditor.noPotion": "No Potion",
 
   "jsst.itemEditor.labelMapNBTPrinter": "Stack NBT Printer",
   "jsst.itemEditor.labelMapNBTPrinter.hint": "Used for label map data files",
