[feat] hiding tooltip for potion effects

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -87,6 +87,8 @@
 
   "jsst.itemEditor.name": "Name Editor",
 
+  "jsst.itemEditor.lore.tooltip.hideAdditional": "Hide Additional Tooltips",
+
   "jsst.itemEditor.durability": "Durability Editor",
 
   "jsst.itemEditor.potionEditor": "Potion Editor",
