[fix] infinite duration potions

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -92,7 +92,7 @@
   "jsst.itemEditor.durability": "Durability Editor",
 
   "jsst.itemEditor.potionEditor": "Potion Editor",
-  "jsst.itemEditor.potionEditor.setPotion": "Set Potion",
+  "jsst.itemEditor.potionEditor.setPotion": "Set Base Potion",
   "jsst.itemEditor.potionEditor.setEffect": "Set Effect",
   "jsst.itemEditor.potionEditor.setAmplifier": "Set Amplifier",
   "jsst.itemEditor.potionEditor.setDuration": "Set Duration",
