[internal] adjust to using an editor context

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -92,6 +92,7 @@
   "jsst.itemEditor.durability": "Durability Editor",
 
   "jsst.itemEditor.potionEditor": "Potion Editor",
+  "jsst.itemEditor.potionEditor.setPotionItemType": "Change Potion Type",
   "jsst.itemEditor.potionEditor.setPotion": "Set Base Potion",
   "jsst.itemEditor.potionEditor.setEffect": "Set Effect",
   "jsst.itemEditor.potionEditor.setAmplifier": "Set Amplifier",
