--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -112,6 +112,12 @@
   "jsst.itemEditor.potion.compensateForItemReductions": "Compensate for item-specific duration reduction",
   "jsst.itemEditor.potion.hideAdditionalTooltipPart": "Hide Additional Tooltips",
 
+  "jsst.itemEditor.trim": "Armour Trim Editor",
+  "jsst.itemEditor.trim.add": "Add Trim",
+  "jsst.itemEditor.trim.remove": "Remove Trim",
+  "jsst.itemEditor.trim.material": "Trim Material",
+  "jsst.itemEditor.trim.pattern": "Trim Pattern",
+
   "jsst.itemEditor.labelMapNBTPrinter": "Stack NBT Printer",
   "jsst.itemEditor.labelMapNBTPrinter.hint": "Used for label map data files",
   "jsst.itemEditor.labelMapNBTPrinter.copyInstruction": "Click to copy the label for this stack. Include quotes!",
