[feat] banner editor

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -109,6 +109,21 @@
   "jsst.itemEditor.enchantment.setLevel": "Set Level",
   "jsst.itemEditor.enchantment.showApplicableOnly": "Show Applicable Only",
 
+  "jsst.itemEditor.banner": "Banner Editor",
+  "jsst.itemEditor.banner.colour": "Colour: %s",
+  "jsst.itemEditor.banner.baseColour": "Base Colour: %s",
+  "jsst.itemEditor.banner.baseColour.change": "Change Base Colour",
+  "jsst.itemEditor.banner.itemType": "Item Type",
+  "jsst.itemEditor.banner.itemType.banner": "Banner",
+  "jsst.itemEditor.banner.itemType.shield": "Shield",
+  "jsst.itemEditor.banner.unknownPattern": "Unknown Pattern",
+  "jsst.itemEditor.banner.changePattern": "Change Pattern",
+  "jsst.itemEditor.banner.changeColour": "Change Colour",
+  "jsst.itemEditor.banner.loadPMC.import": "Import from Banner Editor",
+  "jsst.itemEditor.banner.loadPMC.import.title": "Import from PMC",
+  "jsst.itemEditor.banner.loadPMC.export": "Export to Banner Editor",
+  "jsst.itemEditor.banner.loadPMC.notAffiliated": "JSST is not affiliated with %s.",
+
   "jsst.itemEditor.potion": "Potion Editor",
   "jsst.itemEditor.potion.setPotionItemType": "Change Potion Type",
   "jsst.itemEditor.potion.setPotion": "Set Base Potion",
