[feat] attribute editors; currently no labels

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -109,6 +109,25 @@
   "jsst.itemEditor.enchantment.setLevel": "Set Level",
   "jsst.itemEditor.enchantment.showApplicableOnly": "Show Applicable Only",
 
+  "jsst.itemEditor.attribute": "Attribute Editor",
+  "jsst.itemEditor.attribute.change": "Set Attribute",
+  "jsst.itemEditor.attribute.amount": "Amount: %s",
+  "jsst.itemEditor.attribute.amount.change": "Change Amount",
+  "jsst.itemEditor.attribute.operation": "Operation",
+  "jsst.itemEditor.attribute.operation.0": "Addition",
+  "jsst.itemEditor.attribute.operation.1": "Multiply Base",
+  "jsst.itemEditor.attribute.operation.2": "Multiply Total",
+  "jsst.itemEditor.attribute.slot": "Slot",
+  "jsst.itemEditor.attribute.slot.prefix": "Slot: %s",
+  "jsst.itemEditor.attribute.slot.any": "Any",
+  "jsst.itemEditor.attribute.slot.mainhand": "Main Hand",
+  "jsst.itemEditor.attribute.slot.offhand": "Off Hand",
+  "jsst.itemEditor.attribute.slot.head": "Head",
+  "jsst.itemEditor.attribute.slot.chest": "Chest",
+  "jsst.itemEditor.attribute.slot.legs": "Legs",
+  "jsst.itemEditor.attribute.slot.feet": "Feet",
+  "jsst.itemEditor.attribute.showInTooltip": "Show in Tooltip",
+
   "jsst.itemEditor.banner": "Banner Editor",
   "jsst.itemEditor.banner.colour": "Colour: %s",
   "jsst.itemEditor.banner.baseColour": "Base Colour: %s",
