--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -25,6 +25,8 @@
 
   "jsst.bannerWriter.invalid": "Invalid characters: %s. Ignoring them.",
   "jsst.bannerWriter.needBanners": "No blank banners in hand!",
+  "jsst.bannerWriter.emptyString": "Need 1 or more characters.",
+  "jsst.bannerWriter.start": "Writing \"%s\" with %s text, %s background.",
 
   "jsst.itemEditor.selectBaseItem": "Select a base item",
   "jsst.itemEditor.title": "Item Editor",
