--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -4,5 +4,6 @@
   "jsst.config.portableCrafting": "Portable Crafting",
   "jsst.config.portableCrafting.itemIdOrTag": "Crafting Table ID",
   "jsst.config.portableCrafting.itemIdOrTag.description": "Can either be a raw item ID or an item tag prefix with a hashtag '#'.",
-  "jsst.config.portableCrafting.requiresSneak": "Requires Sneaking"
+  "jsst.config.portableCrafting.requiresSneak": "Requires Sneaking",
+  "jsst.config.campfireTimers": "Campfire Timers"
 }
