[feat] config images

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -2,8 +2,10 @@
   "jsst.title": "Jack's Server Side Tweaks",
   "jsst.config.enabled": "Enabled",
   "jsst.config.portableCrafting": "Portable Crafting",
+  "jsst.config.portableCrafting.description": "Allows users to use a crafting table in their hand instead of needing to place it.",
   "jsst.config.portableCrafting.itemIdOrTag": "Crafting Table ID",
   "jsst.config.portableCrafting.itemIdOrTag.description": "Can either be a raw item ID or an item tag prefix with a hashtag '#'.",
   "jsst.config.portableCrafting.requiresSneak": "Requires Sneaking",
-  "jsst.config.campfireTimers": "Campfire Timers"
+  "jsst.config.campfireTimers": "Campfire Timers",
+  "jsst.config.campfireTimers.description": "Shows progress bars above items on a campfire."
 }
