[feat] banner writer

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -1,16 +1,27 @@
 {
   "jsst.title": "Jack's Server Side Tweaks",
+  "jsst.bannerWriter.disabled": "This feature is disabled.",
+  "jsst.bannerWriter.started": "Started Banner Writer: '%s'",
+  "jsst.bannerWriter.bossbar": "Currently writing: %s",
+  "jsst.bannerWriter.unsupportedCharacters": "Unsupported characters in message: %s",
+  "jsst.bannerWriter.invalidBanner": "No blank banners in main hand.",
+  "jsst.bannerWriter.noText": "Can't use the banner writer with a blank string.",
   "jsst.config.enabled": "Enabled",
-  "jsst.config.portableCrafting": "Portable Crafting",
-  "jsst.config.portableCrafting.description": "Allows users to use a crafting table in their hand instead of needing to place it.",
-  "jsst.config.portableCrafting.itemIdOrTag": "Crafting Table ID",
-  "jsst.config.portableCrafting.itemIdOrTag.description": "Can either be a raw item ID or an item tag prefix with a hashtag '#'.",
-  "jsst.config.portableCrafting.requiresSneak": "Requires Sneaking",
+  "jsst.config.bannerWriter": "Banner Writer",
+  "jsst.config.bannerWriter.description": "Adds a command allowing players to write out text on banners easily.",
+  "jsst.config.bannerWriter.description.credits": "Letter and Number patterns from https://www.gamergeeks.net/apps/minecraft/banners/",
+  "jsst.config.bannerWriter.permissionLevel": "Command Permission Level",
+  "jsst.config.bannerWriter.permissionLevel.description": "Permission level required by players to use the banner writer. 0 is anyone, 4 is usually operator.",
   "jsst.config.campfireTimers": "Campfire Timers",
   "jsst.config.campfireTimers.description": "Shows progress bars above items on a campfire.",
   "jsst.config.itemNudging": "Item Nudging",
   "jsst.config.itemNudging.shiftUp": "Shift Items Upward",
   "jsst.config.itemNudging.shiftUp.description": "Whether block drops will be moved upwards a small amount. This is enough to always pick it up when mined from above.",
   "jsst.config.itemNudging.shiftTowardsPlayer": "Shift Towards Player",
-  "jsst.config.itemNudging.shiftTowardsPlayer.description": "Whether block drops will be moved towards the player that mined them."
+  "jsst.config.itemNudging.shiftTowardsPlayer.description": "Whether block drops will be moved towards the player that mined them.",
+  "jsst.config.portableCrafting": "Portable Crafting",
+  "jsst.config.portableCrafting.description": "Allows users to use a crafting table in their hand instead of needing to place it.",
+  "jsst.config.portableCrafting.itemIdOrTag": "Crafting Table ID",
+  "jsst.config.portableCrafting.itemIdOrTag.description": "Can either be a raw item ID or an item tag prefix with a hashtag '#'.",
+  "jsst.config.portableCrafting.requiresSneak": "Requires Sneaking"
 }
